--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -7,11 +7,13 @@
       <%= @item.product_name %>
     </h2>
     <div class="item-img-content">
-      <%= image_tag @item.image, class: "item-box-img" if @item.image.attached?  %>
+      <%= image_tag @item.image, class: "item-box-img" %>
+    <% if @item.order.present? %>
       <%# 商品が売れている場合は、sold outを表示しましょう %>
       <div class="sold-out">
         <span>Sold Out!!</span>
       </div>
+    <% end %>
       <%# //商品が売れている場合は、sold outを表示しましょう %>
     </div>
     <div class="item-price-box">
